// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APD endpoint Delete/archive APD endpoint | DELETE /apds/:id when authenticated as a user with a non-existant apd ID 1`] = `
Object {
  "error": "The server could not process the request",
}
`;

exports[`APD endpoint Delete/archive APD endpoint | DELETE /apds/:id when authenticated as a user with a valid update 1`] = `""`;

exports[`APD endpoint Delete/archive APD endpoint | DELETE /apds/:id when authenticated as a user with an APD in a state other than the user's state 1`] = `
Object {
  "error": "The user does not have permission to perform this activity",
}
`;

exports[`APD endpoint Delete/archive APD endpoint | DELETE /apds/:id when authenticated as a user with an APD that is not in draft 1`] = `
Object {
  "error": "apd-not-editable",
}
`;
